improved code - added yaml instead of properties - added cats page

--- a/application/src/main/resources/static/html/index.html
+++ b/application/src/main/resources/static/html/index.html
@@ -8,7 +8,8 @@
 <body>
 <div class="container">
     <h1>Hello there!</h1>
-    <a href="/logout">Bye!</a>
+    <p><a href="/cats">Show me cats</a></p>
+    <p><a href="/logout">Bye!</a></p>
 </div>
 </body>
 </html>
